--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,11 @@
 
     <dependencies>
         <!-- MySQL JDBC Driver -->
+        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.33</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.2.0</version>
         </dependency>
 
         <!-- Optional: Add logging framework -->
