--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
             <version>9.2.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.9.2</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Optional: Add logging framework -->
         <dependency>
             <groupId>org.slf4j</groupId>
